<resources>
    <string name="register">Зарегистрироваться</string>
    <string name="app_name">SaveIt</string>
    <string name="logo">logo</string>
    <string name="go">Перейти</string>
    <string name="slogan">Сэкономьте деньги с нами</string>
    <string name="login">Войти</string>
    <string name="hackathon">Hackathon 2017</string>
    <string name="markets">Магазины</string>
    <string name="market">Магазин</string>
    <string name="products">Продукты</string>
    <string name="category">Категория</string>
    <string name="expirydate">Срок годности до</string>
    <string name="price">Цена</string>
    <string name="sum">сум</string>
    <string name="title_activity_maps">Map</string>
    <string name="deal1">Покупайте товары по выгодной цене</string>
    <string name="discount1">Находите товары по низким ценам</string>
    <string name="global_location">Удобное место нахождения торговых точек</string>
    <string name="next">ВПЕРЕД</string>
    <string name="skip">ПРОПУСТИТЬ</string>
    <string name="welcome">Добро Пожаловать в SaveIt</string>
    <string name="fine">Отлично</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="action_settings">Настройки</string>
    <string name="connection_error">Нет соединения</string>
    <string name="login_hint">логин</string>
    <string name="password_hint">пароль</string>
    <string name="name_hint">название магазина</string>
    <string name="phone_hint">номер телефона</string>
    <string name="address_hint">адрес</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="ready">Готово</string>
    <string name="title_activity_market">MarketActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="bin">Корзина</string>
    <string name="logout">Выйти</string>
    <string name="system">Система</string>
    <string name="edit">Редактировать</string>
    <string name="user_mode">Режим пользователя</string>
    <string name="add_product">Добавить продукт</string>
    <string name="product_name_hint">Наименование товара</string>
    <string name="date_hint">Срок годности</string>
    <string name="unit_hint">Единица измерения</string>
    <string name="price_hint">Начальная цена (сум)</string>
    <string name="discount_hint">Скидка %</string>
</resources>
