<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/color_2"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:src="@drawable/ic_guide_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:gravity="center"
        android:text="@string/discount1"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="60dp"/>

</LinearLayout>