<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="uz.avaz.asus.saveit.StartActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/logo"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scaleType="fitEnd"
        android:src="@drawable/ic_saveit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/slogan"
        android:textColor="#444"
        android:textSize="18sp" />

    <View
        android:layout_width="300dp"
        android:layout_height="1px"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@android:color/background_dark" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:max="100"
        android:progress="25" />

    <Button
        android:id="@+id/go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:onClick="goToMainWindow"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/go"
        android:textColor="@android:color/white"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/link"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/register"
            android:textColor="#009688"
            tools:ignore="ButtonStyle"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/link"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/login"
            android:textColor="#009688"
            tools:ignore="ButtonStyle"
            android:onClick="onClick"/>
    </LinearLayout>
    
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hackathon"
        android:textColor="#444"
        android:textSize="14sp" />
</LinearLayout>
