<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_list"
    tools:context="uz.avaz.asus.saveit.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:onClick="goBack"
            android:padding="@dimen/size_16dp"
            android:src="@drawable/ic_back" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logo" />

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#33888888"
                android:hint="@string/login_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#33888888"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#33888888"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#33888888"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#33888888"
                    android:hint="@string/address_hint"
                    android:scrollbars="horizontal"
                    android:padding="12dp"
                    android:textColor="@android:color/white" />

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_darker"
                    android:contentDescription="@string/app_name"
                    android:onClick="showMap"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_navigation" />

            </LinearLayout>


            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/size_16dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/go_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_16dp"
                android:background="@drawable/button"
                android:padding="@dimen/size_16dp"
                android:text="@string/sign_up"
                android:onClick="register"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/map_layout"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:textAllCaps="true"
            android:layout_margin="@dimen/size_16dp"
            android:background="@drawable/button_darker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ready"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</RelativeLayout>