<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="uz.avaz.asus.saveit.AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal"
            android:gravity="center_vertical">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:contentDescription="@string/app_name"
                android:onClick="goBack"
                android:padding="@dimen/size_16dp"
                android:src="@drawable/ic_back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/size_16dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#88888888"
                android:hint="@string/product_name_hint"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#88888888"
                android:hint="@string/date_hint"
                android:inputType="date|text"
                android:padding="8dp"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#88888888"
                android:hint="@string/unit_hint"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#88888888"
                android:hint="@string/price_hint"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#88888888"
                android:hint="@string/discount_hint"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#88888888"
                android:padding="8dp"
                android:textColor="@android:color/white" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/button_darker"
                    android:contentDescription="@string/app_name"
                    android:onClick="showGallery"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_camera" />

                <View
                    android:id="@+id/image_check"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/ic_check"
                    android:visibility="invisible" />

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/size_16dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/go_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_16dp"
                android:background="@drawable/button_darker"
                android:onClick="addProduct"
                android:padding="@dimen/size_16dp"
                android:text="@string/sign_up"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
